@@ -5,6 +5,9 @@ CHANGES IN CUPS V1.3
 
 	- Documentation updates (STR #1775, STR #2130, STR #2131,
 	  STR #2356)
+	- Added a new printer attribute called "cups-version"
+	  which reports the version of CUPS that is running
+	  (STR #2240)
 	- backendRunLoop() now aborts immediately on SIGTERM
 	  if no data has been written yet (STR #2103)
 	- Due to poor IPP support from the vendors, the SNMP
